objects/ICD_Diagnosis__c.object
<CustomObject>
    <fields>
        <fullName>DIAGNOSIS_CODE__c</fullName>
        <label>Diagnosis Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Indicator__c</fullName>
        <label>Group Indicator</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <label>Long Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Of_Diagnosis__c</fullName>
        <label>Type Of Diagnosis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ICD9</fullName>
                </value>
                <value>
                    <fullName>ICD10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ICD Diagnosis</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Group_Indicator__c</columns>
        <columns>DIAGNOSIS_CODE__c</columns>
        <columns>Long_Description__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Type_Of_Diagnosis__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ICD-{0000000}</displayFormat>
        <label>ICD DI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ICD Diagnosis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>